# goit-pycore-hw-08

./: Dockerfile  addressbook.pkl  hw8.py  pyproject.toml
