[tool.poetry]
name = "hw1poetry"
version = "0.1.0"
description = "Poetry hw1 for goit"
authors = ["eughappy <degai7454@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
